[package]
name = "rwolf-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = "0.4.42"
futures = "0.3.31"
mongodb = "3.4.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["add-extension", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
